--- a/config.example.json
+++ b/config.example.json
@@ -1,5 +1,6 @@
 {
     "serverLocalIP": "192.168.x.xxx",
     "serverPort": "333x",
-    "bitaxeLocalIP": "192.168.x.xxx"
+    "bitaxeLocalIP": "192.168.x.xxx",
+    "bitaxeName": "Gamma-x"
 }
